# ecoevodevox

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
configs/: config.yml  nhnca.yml
notebooks/: demo.ipynb
scripts/: ediacaran.py  ediacarian_cambrian.py  evolve_mini.py  qd.py  sim.py  test_env.py  train_e.py  train_eg.py  train_lg.py
src/: simulation.py
src/agents/: __init__.py  core.py  interface.py
src/agents/motor/: __init__.py  base.py  braitenberg.py  ciliated.py  core.py
src/agents/nn/: __init__.py  base.py  core.py  ctrnn.py  rnn.py
src/agents/sensory/: __init__.py  base.py  core.py  flatten.py  image.py  spatially_embedded.py
src/devo/: __init__.py  base.py  core.py  ctrnn.py  direct.py  grn.py  hypernetwork.py  interface.py  model_e.py  model_eg.py  model_lg.py  ndp.py  policy.py  rand.py  utils.py
src/devo/baselines/: mlp.py  rnn.py
src/devo/motor/: __init__.py  braitenberg.py  ciliated.py  core.py
src/devo/nn/: __init__.py  core.py  ctrnn.py  hypernca.py  hypernetwork.py  rand.py  rnn.py
src/devo/policy_network/: base.py  ctrnn.py  rnn.py
src/devo/sensory/: __init__.py  core.py  flatten.py  image.py  spatially_embedded.py
src/eco/: __init__.py  chemicals.py  env.py  food.py  gridworld.py  interface.py  mini.py  obs_utils.py  utils.py
src/evo/: __init__.py  core.py  ga.py  mutation.py  qd.py
src/nn/: base.py  ctrnn.py
src/simulation/: __init__.py  core.py  interactive.py  logging.py  metrics.py  render.py  scenario.py  simulation.py  utils.py
src/utils/: log.py  viz.py
