[project]
name = "ecoevodevox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "equinox>=0.13.3",
    "flax>=0.12.2",
    "jax; platform_system == 'Darwin'",
    "jax[cuda]; platform_system != 'Darwin'",
]

[project.optional-dependencies]
logging = [
    "wandb>=0.24.0",
]
plotting = [
    "celluloid>=0.2.0",
    "matplotlib>=3.10.8",
]
notebook = [
    "ipython>=9.9.0",
]
